--- a/index.html
+++ b/index.html
@@ -3,40 +3,115 @@
   <head>
     <meta charset="utf-8">
     <title>My First Bitstarter</title>
-    <link type="text/css" rel="stylesheet"
-	  href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
+    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
+    <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial_button.css">
+    <script src="https://d396quszo40orc.cloudfront.net/startup%2Fcode%2Fjquery.js"></script>
+    <script src="https://d396quszo40orc.cloudfront.net/startup%2Fcode%2Fbootstartp.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600,700,800" rel="stylesheet" type="text/css">
     <style type="text/css">
-      body {
-      padding-top: 20px;
-      padding-bottom: 40px;
+      @media (min-width: 980px) {
+        body {
+          padding-top: 60px;
+        }
+        .linediv-l {
+          border-right: 1px white solid;
+        }
+        .linediv-r {
+          border-left: 1px white solid;
+        }
       }
-      .container {
-      width: 960px;
+
+      @media (max-width: 480px) {
+        .copy {
+          padding: 2.5% 10%;
+        }
+        .linediv-l {
+          border-bottom: 1px white solid;
+        }
+        .linediv-r {
+          border-top: 1px white solid;
+        }
+      }
+
+      /* all form factors +/
+
+      /* Main body and headings */
+      body {
+      font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+      }
+      .heading, .subheading {
+      font-family: 'Ubuntu', Helvetica, Arial, sans-serif;
+      text-align: center;
       }
       p.lead {
-       padding-top: 15px;
+       padding-top: 1.5%;
+      font-size: 24px;
+      line-height: 30px;
       }
-      .navigation, .pitch, .section1, .section2, .faq, .footer {
-       padding: 10px 0px 10px 0px;
+      p {
+      font-size: 18px;
+      line-height: 24px;
       }
-      .video, .thermometer, .order, .social {
-       border: 1px dotted;
+      .pitch {
+      padding: 2.5% 0%;
+      }
+      .order {
+      padding: 2% 0%;
+      }
+      .actions {
+      background-color: #343434;
+      padding: 3% 0%;
+      }
+      .video, .thermometer, .order, .social, .statistics {
        text-align: center;
       }
-      .video {
-       height: 124px;
-       line-height: 124px;
+      .statistics h3, .statistics p {
+      color: white;
       }
-      .thermometer, .order, .social {
-       height: 40px;
-       line-height: 40px;
+      .copy {
+      padding-top: 2.5%;
+      padding-bottom: 2.5%;
+      text-align: justify;
       }
-      div.row {
-       border: 1px solid;
+      .asset {
+      padding: 2.5% 0%;
+      }
+      .footer {
+      color: #cccccc;
+      text-align: center;
+      }
+      .footer p {
+      font-size: 11px;
+      }
+      .footer a {
+      color: #ccccff;
       }
     </style>
   </head>
   <body>
+<!-- Mobile-friendly navbar -->
+<div class="navbar navbar-inverse navbar-fixed-top">
+  <div class="navbar-inner">
+    <div class="container">
+      <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+	<span class="icon-bar"></span>
+	<span class="icon-bar"></span>
+	<span class="icon-bar"></span>
+      </button>
+      <a class="brand" href="#">Bitstarter</a>
+      <div class="nav-collapse collapse">
+	<ul class="nav">
+	  <li class="active"><a href="#">Homte</a></li>
+	  <li><a href="#about">About</a></li>
+	  <li><a href="#contact">Contact</a></li>
+	</ul>
+      </div>
+    </div>
+  </div>
+</div>
     <div class="container">
       <div class="row navigation">
 	<div class="span2 logo">
