first version of vaktarinn

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>My First Bitstarter</title>
+    <title>Vaktarinn</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
@@ -101,10 +101,10 @@
 	<span class="icon-bar"></span>
 	<span class="icon-bar"></span>
       </button>
-      <a class="brand" href="#">Bitstarter</a>
+      <a class="brand" href="#">Vaktarinn</a>
       <div class="nav-collapse collapse">
 	<ul class="nav">
-	  <li class="active"><a href="#">Homte</a></li>
+	  <li class="active"><a href="#">Home</a></li>
 	  <li><a href="#about">About</a></li>
 	  <li><a href="#contact">Contact</a></li>
 	</ul>
@@ -115,17 +115,17 @@
     <div class="container">
       <div class="row-fluid heading">
 	<div class="span12">
-	  <h1>Product</h1>
+	  <h1>Vaktarinn</h1>
 	</div>
       </div>
       <div class="row-fluid subheading">
 	<div class="span12">
-	  <p class="lead">One sentence description</p>
+	  <p class="lead">Cloud based video surveilance</p>
 	</div>
       </div>
       <div class="row-fluid pitch">
 	<div class="span5 offset1 video">
-	  <img class="img-polaroid" src="http://placehold.it/480x300">
+	  <img class="img-polaroid" src="http://imgur.com/XFrmFU1.jpg">
 	</div>
 	<div class="span5 actions">
 	  <div class="span8 offset2">
@@ -137,7 +137,7 @@
 	      </div>
 	      <div class="span4">
 		<div class="linediv-c">
-		  <h3>$600</h3> <p> of $10.000</p>
+		  <h3>$600</h3> <p> of $800.000</p>
 		</div>
 	      </div>
 	      <div class="span4">
@@ -165,15 +165,21 @@
       <!-- MArketing stuff here -->
       <div class="row-fluid section1">
 	<div class="span5 offset1 asset">
-	  <img class="img-polaroid" src="http://placehold.it/480x300">
+	  <img class="img-polaroid" src="http://imgur.com/rXBFfV4.jpg">
 	</div>
 	<div class="span5 copy">
 	  <p>
-	    Lorem ipsum dolor
+	    Vaktarinn is a modern video surveilance solution compatible with the latest in html5 and cloud based technology.  Some of the features include
+<ul>
+<li>View live video feeds in html5 video compatible browsers</li>
+<li>Scroll back in time (time shifting)</li>
+<li>Receive alarms with video feeds to mobile devices</li>
+<li>Connect to event monitors, f.x. panic buttons</li>
+</ul>
 	  </p>
 	</div>
       </div>
-
+<!--
       <div class="row-fluid section2">
 	<div class="span5 offset1 copy copy-right">
 	  <p>
@@ -183,7 +189,7 @@
 	<div class="span5 asset">
 	  <img class="img-polaroid" src="http://placehold.it/480x300">
 	</div>
-      </div>
+      </div>-->
       <div class="row-fluid faq">
 	<div class="span10 offset1">
 	  <h3>FAQ</h3>
@@ -191,24 +197,24 @@
 	    <div class="accordion-group">
 	      <div class="accordion-heading">
 		<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
-		  What does FAQ stand for?
+		  What is Vaktarinn??
 		</a>
 	      </div>
 	      <div id="collapseOne" class="accordion-body collapse">
 		<div class="accordion-inner">
-		  Frequently Asked Question.
+		  It's a video surveilance solution in the cloud.
 		</div>
 	      </div>
 	    </div>
 	    <div class="accordion-group">
 	      <div class="accordion-heading">
 		<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">
-What's a Frequently Asked Question?
+What do I need to use Vaktarinn?
 		</a>
 	      </div>
 	      <div id="collapseTwo" class="accordion-body collapse">
 		<div class="accordion-inner">
-		  A question which is commonly asked by users.
+		  One or more network connected cameras.
 		</div>
 	      </div>
 	    </div>
