--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
 	  <img class="img-polaroid" src="http://imgur.com/XFrmFU1.jpg">
 	</div>
 	<div class="span5 actions">
+<div class="row-fluid">
 	  <div class="span8 offset2">
 	    <div class="statistics">
 	      <div class="span4">
@@ -147,20 +148,27 @@
 	      </div>
 	    </div>
 	  </div>
+<div class="row-fluid">
 	  <div class="span10 offset1">
 	    <div class="thermometer progress active">
 	      <div class="bar bar-success" style="width: 60%;"></div>
 	      <div class="bar bar-warning" style="width: 40%;"></div>
 	    </div>
 	  </div>
+</div>
+<div class="row-fluid">
 	  <div class="span6 offset3 order">
 	    <button class="btn btn-success btn-large">Preorder</button>
 	  </div>
+</div>
+<div class="row-fluid">
 	  <div class="span8 offset2 social">
 	    <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
 	    <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
 	  </div>
+</div>
 	</div>
+      </div>
       </div>
       <!-- MArketing stuff here -->
       <div class="row-fluid section1">
